Make overflow bug worse

--- a/mole.css
+++ b/mole.css
@@ -19,11 +19,11 @@
   height: 220px;
   top: 286px;
   margin-right: 200px;
+  bottom: 0px;
 }
 
 .wgs__mole-head--hidden {
-  margin-top: 482px;
-  
+  margin-top: 510px;
 }
 
 
